# vit-trt

./: .gitignore  README.md  alternative_attn_modules.py  build_trt.py  main.py  min_repro.py  pyproject.toml  video_mae.py
